fixed alignment

--- a/app/assets/stylesheets/components/_friends-modal.scss
+++ b/app/assets/stylesheets/components/_friends-modal.scss
@@ -31,4 +31,9 @@
 
 .modal-content {
   border-radius: 10px;
+  width: fit-content;
+}
+
+.modal-buttons {
+  margin-left: 20px;
 }
